deploy/kubernetes/openshift-k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: iso-platform-k8s
  labels:
    name: iso-platform-k8s
