deploy/kubernetes/openshift-k8s/patch-remove-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doc-agent
  namespace: iso-platform
$patch: delete
